Added serializer for blogs, follows, likes and comments and added action mailer for new user signup.

--- a/app/views/blog_mailer/new_blog_email.html.erb
+++ b/app/views/blog_mailer/new_blog_email.html.erb
@@ -6,7 +6,7 @@
 
     <h1><%= @user.username %> posted a blog. (<%= @blog.title %>)</h1>
     <p>
-        Please follow the link for blog- 'http://127.0.0.1:3000/blogs/<%= @blog.id %>'
+        Please follow the link for blog- http://127.0.0.1:3000/blogs/<%= @blog.id %>
     </p>
     <p>Thanks for reading and have a great day!</p>
     <p>The blogapp team</p>
