--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,15 +3,18 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hii <%= @profile.first_name %></P>
-    <h4>Welcome to blog_app, <%= @user.username %></h4>
+    <p>Hii <%= @user.username %></P><br>
+
+    <h4>Welcome to my blog_app</h4>
+
     <p>
-      You have successfully signed up to blog_app.com,
-      your username is: <%= @user.username %>.<br>
+      You have successfully signed up to blog_app.com.
     </p>
+
     <p>
       To login to the site, just follow this link: http://127.0.0.1:3000/login.
-    </p>
+    </p><br>
+
     <p>Thanks for joining and have a great day!</p>
     <p>The Blog_app Team</p>
 
