--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,7 +3,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hii <%= @user.username %></P><br>
+    <p>Hii <%= @user.username %></P>
 
     <h4>Welcome to my blog_app</h4>
 
