--- a/app/views/blog_mailer/new_blog_email.html.erb
+++ b/app/views/blog_mailer/new_blog_email.html.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <p>Hii <%= @follower_user.username %>,</p>
-    <h4><%= @user.username %> posted a blog. (<%= @blog.title[0..20] %>)...</h4>
+    <h4><%= @user.username %> posted a blog. (<%= @blog.title[0..20] %>)</h4>
     <p>
         Please follow the link for blog- http://127.0.0.1:3000/blogs/<%= @blog.id %>
     </p>
