Added view for login, blogs and comments

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Blogs</h1>
+
 <% flash.each do |name, msg| -%>
-      <%= content_tag :div, msg, class: name %>
-    <% end -%>
+  <%= content_tag :div, msg, class: name %>
+<% end %>
+
 <ul>
   <% @blogs.each do |blog| %>
     <li>
