--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -1,20 +1,30 @@
-<div class="container mt-5">
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
-            <div class="card px-5 py-5" id="form1">
-                <div class="form-data" v-if="!submitted">
-                    <div class="forms-inputs mb-4"> <span>Email or username</span> <input autocomplete="off" type="text" v-model="email" v-bind:class="{'form-control':true, 'is-invalid' : !validEmail(email) && emailBlured}" v-on:blur="emailBlured = true">
-                        <div class="invalid-feedback">A valid email is required!</div>
-                    </div>
-                    <div class="forms-inputs mb-4"> <span>Password</span> <input autocomplete="off" type="password" v-model="password" v-bind:class="{'form-control':true, 'is-invalid' : !validPassword(password) && passwordBlured}" v-on:blur="passwordBlured = true">
-                        <div class="invalid-feedback">Password must be 8 character!</div>
-                    </div>
-                    <div class="mb-3"> <button v-on:click.stop.prevent="submit" class="btn btn-dark w-100">Login</button> </div>
-                </div>
-                <div class="success-data" v-else>
-                    <div class="text-center d-flex flex-column"> <i class='bx bxs-badge-check'></i> <span class="text-center fs-1">You have been logged in <br> Successfully</span> </div>
-                </div>
-            </div>
+<div class="container-fluid ">
+  <div class="row m-5 text-center">
+    <%= form_with url: "/login", method: :post do |form| %>
+      <div class="row m-1">
+        <div class="col-2 text-right">
+          <%= form.label :username, "Username or Email:" %>
         </div>
-    </div>
+        <div class="col-3">
+          <%= form.text_field :username %>
+        </div>
+      </div>
+      <div class="row m-1">
+        <div class="col-2 text-right">
+          <%= form.label :password, "password:" %>
+        </div>
+        <div class="col-3">
+          <%= form.password_field :password %>
+        </div>
+      </div>
+      <div class="row m-1">
+        <div class="col-6 text-center">
+          <%= form.submit "Login" %>
+        </div>
+      </div>
+      <div class="row m-1">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+  </div>
 </div>
