--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
 <div>
-    <strong>Comment: </strong><%= comment.comment %><br>
-    <strong>Comment by: </strong><%= comment.user.username %>
+    <strong>Comment: </strong><%= comment.comment_text %><br>
+    <strong>Comment by: </strong> <%= comment.user.username %>
 </div><br>
