--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -1,30 +1,21 @@
-<div class="container-fluid ">
-  <div class="row m-5 text-center">
-    <%= form_with url: "/login", method: :post do |form| %>
-      <div class="row m-1">
-        <div class="col-2 text-right">
-          <%= form.label :username, "Username or Email:" %>
+<div class="container mt-5">
+  <div class="row">
+    <div class= 'col-md-4'>
+      <h2>Login</h2>
+      <%= form_with url: "/login", method: :post do |form| %>
+        <div class="mb-3">
+          <%= form.label :username, "Username or Email:", class: "form-label" %>
+          <%= form.text_field :username, class: "form-control", required: true %>
         </div>
-        <div class="col-3">
-          <%= form.text_field :username %>
+        <div class="mb-3">
+          <%= form.label :password, "Password:", class: "form-label" %>
+          <%= form.password_field :password, class: "form-control", required: true %>
         </div>
-      </div>
-      <div class="row m-1">
-        <div class="col-2 text-right">
-          <%= form.label :password, "password:" %>
+        <%= form.submit "Login", class: "btn btn-primary" %>
+        <div class="mt-3">
+          <%= link_to "Create an account!", signup_path %>
         </div>
-        <div class="col-3">
-          <%= form.password_field :password %>
-        </div>
-      </div>
-      <div class="row m-1">
-        <div class="col-6 text-center">
-          <%= form.submit "Login" %>
-        </div>
-      </div>
-      <div class="row m-1">
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
