--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,25 +1,9 @@
 <%= render "navbar" %>
+
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8">
-      <% @blogs.each do |blog| %>
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title"><%= blog.title %></h5>
-            <p class="card-text">
-              <small class="text-muted">
-                Posted on <%= blog.created_at.to_date %> by <%= link_to blog.user.username, profile_path(blog.user.username) %>
-              </small>
-            </p>
-            <p class="card-text"><%= blog.body[0..25]... %></p>
-            <span class="text-secondary badge">
-            <img src="https://pngimg.com/uploads/like/like_PNG89.png" height=20>
-              <p><%= blog.likes_count %> Likes</p>
-            </span><br>
-            <%= link_to "Read More", blog_path(blog), class: "btn btn-primary" %>
-          </div>
-        </div>
-      <% end %>
+      <%= render @blogs %>
     </div>
   </div>
 </div>
