--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -2,20 +2,26 @@
   <div class="row">
     <div class= 'col-md-4'>
       <h2>Login</h2>
-      <%= form_with url: "/login", method: :post do |form| %>
+      <%= form_with url: "/login" do |form| %>
+
         <div class="mb-3">
           <%= form.label :username, "Username or Email:", class: "form-label" %>
           <%= form.text_field :username, class: "form-control", required: true %>
         </div>
+
         <div class="mb-3">
           <%= form.label :password, "Password:", class: "form-label" %>
           <%= form.password_field :password, class: "form-control", required: true %>
         </div>
+
         <%= form.submit "Login", class: "btn btn-primary" %>
-        <div class="mt-3">
-          <%= link_to "Create an account!", signup_path %>
-        </div>
+        <b class="text-danger ms-2"><%= flash[:notice] %></b>
+
       <% end %>
+
+      <div class="mt-3">
+        <%= link_to "Create an account!", signup_path %>
+      </div>
     </div>
   </div>
 </div>
