--- a/app/views/blogs/_navbar.html.erb
+++ b/app/views/blogs/_navbar.html.erb
@@ -7,7 +7,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto ">
         <li class="nav-item active">
@@ -20,10 +20,10 @@
           <%= link_to "Profile", profile_path(@current_user.username), class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/notifications">Notifications</a>
+          <%= link_to "Notifications", notifications_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login" data-turbo-confirm="Do you want to logout" data-turbo-method= "delete">Logout</a>
+          <%= link_to "Logout", login_path, class: "nav-link", data: { turbo_confirm: "Do you want to logout", turbo_method: "delete" } %>
         </li>
       </ul>
     </div>
