--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Edit Blog</h1>
-<%= render "form", blog: @blog %>
+<%= render "blogs/navbar" %>
+
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title mb-3">Update Your Blog</h5>
+          <%= render "form", blog: @blog %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
