--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,7 @@
-<%= form_with model: [@blog, @blog.comments.build] do |form| %>
-  <p>
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </p>
-  <p>
-    <%= form.label :comment %><br>
-    <%= form.text_area :comment %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+<%= form_with url: blog_comments_path(@blog) do |form| %>
+  <div class="mb-3">
+    <%= form.label :comment, "Comment", class: "form-label" %>
+    <%= form.text_area :comment_text, class: "form-control", rows: "3", required: true %>
+  </div>
+  <%= form.submit "Comment", class: "btn btn-primary" %>
 <% end %>
