--- a/app/views/authentication/login.html.erb
+++ b/app/views/authentication/login.html.erb
@@ -14,7 +14,7 @@
           <%= form.password_field :password, class: "form-control", required: true %>
         </div>
 
-        <%= form.submit "Login", class: "btn btn-primary" %>
+        <%= form.submit "Login", class: "btn btn-success" %>
         <b class="text-danger ms-2"><%= flash[:notice] %></b>
 
       <% end %>
