--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -10,7 +10,7 @@
               <b class="text-danger"><%= message %></b>
             <% end %>
           </div>
-          
+
           <div class="mb-3">
             <%= form.label :email, "Email Address", class: "form-label" %>
             <%= form.email_field :email, class: "form-control", required: true %>
@@ -18,7 +18,7 @@
               <b class="text-danger"><%= message %></b>
             <% end %>
           </div>
-          
+
           <div class="mb-3">
             <%= form.label :password, "Password:", class: "form-label" %>
             <%= form.password_field :password, class: "form-control", required: true %>
@@ -26,9 +26,11 @@
               <b class="text-danger"><%= message %></b>
             <% end %>
           </div>
-          
-          <button type="submit" class="btn btn-success">Sign Up</button>
+          <%= form.submit "Sign up", class: "btn btn-success" %>
         <% end %>
+        <div class="mt-3">
+          <%= link_to "Already have an account?", login_path %>
+      </div>
     </div>
   </div>
 </div>
