Added view to show comment and replies on that comment

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
   <li class="list-group-item">
     <img src= <%= blog_profile_picture_url(comment) %> alt="Author Profile" width="50" height="50" class="rounded-circle me-2">
     <%= link_to "#{blog_full_name(comment)}", profile_path(comment.user.username), class: "text-secondary link-offset-2 link-underline link-underline-opacity-25" %>
-    <p onclick=<%= comment_path(comment) %>> <%= comment.comment_text %> </p>
+    <%= link_to comment.comment_text, comment_path(comment), class: "text-dark my-2", style: "display: block; text-decoration: none" %>
 
     <% if @current_user.id == comment.user_id %>
       <%= link_to "Delete", comment_path(comment), class: "btn btn-danger mb-1", data: { turbo_method: "delete" }, style: style = "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
