--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,20 +1,15 @@
-
 <%= form_with model: blog do |form| %>
 
   <div class="mb-3">
     <%= form.label :title, class: "form-label" %>
     <%= form.text_field :title, class: "form-control", required: true %>
-    <% blog.errors.full_messages_for(:title).each do |message| %>
-      <b class="text-danger"><%= message %></b>
-    <% end %>
+    <%= render "errors/show_errors", obj: blog, attr: :title %>
   </div>
 
   <div class="mb-3">
     <%= form.label :body, class: "form-label" %>
     <%= form.text_area :body, class: "form-control", rows: 5, required: true %>
-    <% blog.errors.full_messages_for(:body).each do |message| %>
-      <b class="text-danger"><%= message %></b>
-    <% end %>
+    <%= render "errors/show_errors", obj: blog, attr: :body %>
   </div>
 
   <div class="form-check mb-3">
@@ -23,7 +18,7 @@
   </div>
 
   <div class="mb-3">
-    <%= form.file_field :images, class: "form-control" %>
+    <%= form.file_field :pictures, class: "form-control" %>
   </div>
   <%= form.submit class: "btn btn-primary" %>
 <% end %>
