--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,52 +1,37 @@
-  <%= render "blogs/navbar" %>
+<div class="card mb-4">
+  <div class="card-body">
+  <h5 class="mt-4 card-title"><%= @comment.comment_text %></h5>
+    <p class="card-text">
+      <small class="text-muted">
+        Posted on <%= @comment.created_at.to_date %>
+      </small>
+    </p>
 
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="card mb-4">
-          <div class="card-body">
-          <h5 class="mt-4 card-title"><%= @comment.comment_text %></h5>
-            <p class="card-text">
-              <small class="text-muted">
-                Posted on <%= @comment.created_at.to_date %>
-              </small>
-            </p>
+    <% if @current_user.id == @comment.user_id %>
+        <%= link_to "Delete", comment_path(@comment), class: "btn btn-danger mb-1", data: { turbo_method: "delete" }, style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
+        <%= link_to "Edit", edit_comment_path(@comment), class: "btn btn-primary mb-1", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
+    <% end %>
 
-            <% if @current_user.id == @comment.user_id %>
-                <%= link_to "Delete", comment_path(@comment), class: "btn btn-danger mb-1", data: { turbo_method: "delete" }, style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
-                <%= link_to "Edit", edit_comment_path(@comment), class: "btn btn-primary mb-1", style: "--bs-btn-padding-y: .30rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .60rem;" %>
-            <% end %>
-
-            <div class="d-flex align-items-center my-3">
-              <img src= <%= blog_profile_picture_url(@comment) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
-              <h6 class="card-title">
-                <p>Commenter:</p>
-                <%= link_to "#{blog_full_name(@comment)}", profile_path(@comment.user.username), class: "link-offset-2 text-success" %>
-              </h6>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Reply on Comment</h5>
-            <%= form_with model: [@comment.blog, @comment.blog.comments.build] do |form| %>
-              <div class="mb-3">
-                <%= form.hidden_field :parent_comment_id, value: @comment.id %>
-                <%= form.label :comment, "Comment", class: "form-label" %>
-                <%= form.text_area :comment_text, class: "form-control", rows: "3", required: true %>
-              </div>
-              <%= form.submit "Comment", class: "btn btn-primary" %>
-            <% end %>
-          </div>
-        </div>
-
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 id="list_comments" class="card-title">Replies: </h5>
-            <%= render @comment.replies %>
-          </div>
-        </div>
-      </div>
+    <div class="d-flex align-items-center my-3">
+      <img src= <%= blog_profile_picture_url(@comment) %> alt="Author Profile" width="100" height="100" class="rounded-circle me-2">
+      <h6 class="card-title">
+        <p>Commenter:</p>
+        <%= link_to "#{blog_full_name(@comment)}", profile_path(@comment.user.username), class: "link-offset-2 text-success" %>
+      </h6>
     </div>
   </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Reply on Comment</h5>
+    <%= render "comments/form", blog: @comment.blog, reply: true, obj: @comment %>
+  </div>
+</div>
+
+<div class="card mb-4">
+  <div class="card-body">
+    <h5 id="list_comments" class="card-title">Replies: </h5>
+    <%= render @comment.replies %>
+  </div>
+</div>
