--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -2,29 +2,23 @@
   <div class="row">
     <div class= 'col-md-4'>
       <h2>Sign Up</h2>
-        <%= form_with url: "/user", method: :post do |form| %>
+        <%= form_with url: user_path, model: @user do |form| %>
           <div class="mb-3">
             <%= form.label :username, "Username", class: "form-label" %>
             <%= form.text_field :username, class: "form-control", required: true %>
-            <% @user.errors.full_messages_for(:username).each do |message| %>
-              <b class="text-danger"><%= message %></b>
-            <% end %>
+            <%= render "errors/show_errors", obj: @user, attr: :username %>
           </div>
 
           <div class="mb-3">
             <%= form.label :email, "Email Address", class: "form-label" %>
             <%= form.email_field :email, class: "form-control", required: true %>
-            <% @user.errors.full_messages_for(:email).each do |message| %>
-              <b class="text-danger"><%= message %></b>
-            <% end %>
+            <%= render "errors/show_errors", obj: @user, attr: :email %>
           </div>
 
           <div class="mb-3">
             <%= form.label :password, "Password:", class: "form-label" %>
             <%= form.password_field :password, class: "form-control", required: true %>
-            <% @user.errors.full_messages_for(:password).each do |message| %>
-              <b class="text-danger"><%= message %></b>
-            <% end %>
+            <%= render "errors/show_errors", obj: @user, attr: :password %>
           </div>
           <%= form.submit "Sign up", class: "btn btn-success" %>
         <% end %>
